--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,6 +9,30 @@
   
 </head>
   
+  <nav class="navbar">
+    <ul>
+      <li><a href="./index.html">Home</a></li>
+      <li>
+        <a href="./AboutUs.html">About Us</a>
+        <ul>
+          <li><a href="./Officers.html">Officers</a></li>
+          <li><a href="./Our-Impact.html">Our Impact</a></li>
+        </ul>
+      </li>
+      <li>
+        <a href="#">Member Info</a>
+        <ul>
+          <li><a href="./Forms.html">Forms</a></li>
+          <li><a href="./Events-Hours.html">Events & Credits</a></li>
+          <li><a href="./ScholarshipsOpp.html">Scholarship/Writing Competitions</a></li>
+        </ul>
+      </li>
+      <li><a href="./Newsletter.html">Newsletter</a></li>
+      <li><a href="./Gallery.html">Gallery</a></li>
+      <li><a href="./Contact.html">Contact</a></li>
+    </ul>
+  </nav>
+  
 <h1>
   Our Mission
   <script src="script.js"></script>
