--- a/Gallery.html
+++ b/Gallery.html
@@ -11,7 +11,7 @@
 
     <nav class="navbar">
       <ul>
-        <li><a href="./Home.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li>
           <a href="./AboutUs.html">About Us</a>
           <ul>
