--- a/Officers.html
+++ b/Officers.html
@@ -10,7 +10,7 @@
 </head>
   <nav class="navbar">
     <ul>
-      <li><a href="./Home.html">Home</a></li>
+      <li><a href="./index.html">Home</a></li>
       <li>
         <a href="./AboutUs.html">About Us</a>
         <ul>
