--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <meta name="viewport" content="width=device-width">
   <title>CRHS NEHS</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  
+  <style>
+  img {
+      max-width:50%;
+      height:50%;
+  }
+  </style>
 </head>
   
   <nav class="navbar">
@@ -46,7 +51,7 @@
   
 <h2>Una and the Lion Chapter </h2>
   
-<img src="https://upload.wikimedia.org/wikipedia/commons/5/57/Briton_Rivi%C3%A8re_-_Una_and_the_Lion.jpg" width="160" height="108" alt="Una and the Lion">
+<img src="https://upload.wikimedia.org/wikipedia/commons/5/57/Briton_Rivi%C3%A8re_-_Una_and_the_Lion.jpg" alt="Una and the Lion">
 
   <p> Welcome to Cinco Ranch High School's English Honor Society home page! Join us for the first Friday of each month in Ms. Sarver's room, 1620. Click on the above tabs for more information on who we are, what we do, and how you can join! <br>
   <br>About the Chapter Name: Una and the Lion are characters from the classic allegorical poem The Faerie Queene by Edmund Spenser. The pair represent beauty, endurance, and strength and are depicted as such on the famous painting above by Briton Riviere. Similarly, our club hopes to spread the beauty of the English language while also embodying endurance and strength in our quest for knowledge and truth. </p>
