--- a/Events-Hours.html
+++ b/Events-Hours.html
@@ -39,7 +39,7 @@
   <script src="script.js"></script>
 </h1>
 <h2> </h2>
-  <iframe src="https://docs.google.com/spreadsheets/d/1nRlvMMZT1smaPIK3tdo_2LIBEUm-VzvwPthVspa8p0M/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+  <iframe src="https://docs.google.com/spreadsheets/d/1nRlvMMZT1smaPIK3tdo_2LIBEUm-VzvwPthVspa8p0M/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"width=100% height= 600></iframe>
   
 
   
