--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
   
 
   
-<h1>
-  Cinco Ranch High School 
-  <script src="script.js"></script>
-</h1>
-  
-<h1>
+<h1 style="text-align:center;">
+  Cinco Ranch High School <br>
+
     National English Honor Society
   </h1>
   
-<h2>Una and the Lion Chapter </h2>
-  
+<h2 style="text-align:center;" >Una and the Lion Chapter </h2>
+
+  <div style="text-align: center;">
 <img src="https://upload.wikimedia.org/wikipedia/commons/5/57/Briton_Rivi%C3%A8re_-_Una_and_the_Lion.jpg" alt="Una and the Lion">
-
-  <p> Welcome to Cinco Ranch High School's English Honor Society home page! Join us for the first Friday of each month in Ms. Sarver's room, 1620. Click on the above tabs for more information on who we are, what we do, and how you can join!
+  </div>
+  
+  <p style="text-align:center;"> Welcome to Cinco Ranch High School's English Honor Society home page! <br> 
+  Join us for the first Friday of each month in Ms. Sarver's room, 1620. Click on the above tabs for more information on who we are, what we do, and how you can join!
   </p>
-
+<br> 
 </html>
