--- a/Newsletter.html
+++ b/Newsletter.html
@@ -31,3 +31,17 @@
       <li><a href="./Contact.html">Contact</a></li>
     </ul>
   </nav>
+  
+<h1>
+  Monthly Newsletter
+  <script src="script.js"></script>
+</h1>
+<h2> </h2>
+
+  <iframe class="pdf" 
+    src=
+  "https://flgr.sh/txtfssLr_pdf?_ga=2.13881086.872138817.1722457733-1899891256.1722457733"
+  width="800" height="500">
+  </iframe>
+
+</html>
