--- a/Contact.html
+++ b/Contact.html
@@ -39,9 +39,11 @@
   <script src="script.js"></script>
 </h1>
 <h2> Email</h2>
-  <p>crhs.nehs24@gmail.com </p>
-  <h2>Remind Code</h2>
-  <p>@crhsnehs24 </p>
+<p>crhs.nehs24@gmail.com </p>
+<h2>Remind Code</h2>
+<p>@crhsnehs24 </p>
+<h2>Remind Code</h2>
+<p>@crhs.nehs</p>
 
   
 
