--- a/Officers.html
+++ b/Officers.html
@@ -37,7 +37,7 @@
   <script src="script.js"></script>
 </h1>
 
-  
+<h2> Sponsor: <br> Ms. Sarver  </h2>
 <h2> Presidents: <br> Enhan Yuan & Zunaira Shaikh  </h2>
   
 <img src="">
