--- a/Contact.html
+++ b/Contact.html
@@ -42,7 +42,7 @@
 <p>crhs.nehs24@gmail.com </p>
 <h2>Remind Code</h2>
 <p>@crhsnehs24 </p>
-<h2>Remind Code</h2>
+<h2>Instagram </h2>
 <p>@crhs.nehs</p>
 
   
