--- a/Forms.html
+++ b/Forms.html
@@ -38,7 +38,8 @@
   Forms
   <script src="script.js"></script>
 </h1>
-<h2>Membership Form- due by September 20th </h2>
+<p>Membership Form- due by September 20th <br>
+Membership Dues- $20 payable by cash or checks (made payable to CInco Ranch NEHS), shirts are an extra $10!</p>
   <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe_oIjmp-tHO24iXH0gJ_CCO_5vyZSYB8IQdUkLkSm9xhZoJQ/viewform?embedded=true" width="640" height="1657" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
   
 
