--- a/ScholarshipsOpp.html
+++ b/ScholarshipsOpp.html
@@ -41,10 +41,10 @@
   <iframe src="https://calendar.google.com/calendar/embed?src=ae1bd70643f42a70240c3c8e5223a144cade2766e53abfcc39c77e06dfa07c4a%40group.calendar.google.com&ctz=America%2FChicago" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
 
   <h2>Scholastic Arts and Writing Competition </h2>
-  <p> More information here: https://www.artandwriting.org/ </p>
+  <p> More information here: <a href="https://www.artandwriting.org/"> Click me! </a> </p>
   <h2>Bennington College Young Writers Awards </h2>
-  <p> More information here: https://www.bennington.edu/events/young-writers-awards </p>
-
+  <p> More information here: <a href="https://www.bennington.edu/events/young-writers-awards"> Click me! </a> </p>
+<br> 
 
   
 </html>
