--- a/Newsletter.html
+++ b/Newsletter.html
@@ -43,5 +43,7 @@
   "https://flgr.sh/txtfssLr_pdf?_ga=2.13881086.872138817.1722457733-1899891256.1722457733"
   width="800" height="500">
   </iframe>
+  <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTWicdeYlxte003TVWDU5oKUBU-hbO9_AionsDNYgPTWaGfUUjNvnpzDi57GR-Vh4Zx_hENuzxVEHrL/embed?start=false&loop=false&delayms=3000" 
+    frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 </html>
