--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </style>
 </head>
       <div style="text-align: center;">
-<img src="https://www.canva.com/design/DAGeZH77_A4/ZqwD5L_yY-YC6hbnyDGPGQ/view?utm_content=DAGeZH77_A4&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hf135b87061" alt="Logo">
+<img src="https://drive.google.com/file/d/1XqpADTDWXn6EpwKlc_x_jUB8iOcxZJz_/view?usp=sharing" alt="Logo">
   </div>  
   
   <nav class="navbar">
